@@ -281,15 +281,12 @@ public class AggregationFacade {
     public EventPhotoResDto showUserEventPhoto(User tmpUser, Long eventId){
         User user = userService.findUser(tmpUser.getId());
         Event event = eventService.findEvent(eventId);
-        List<EventPhoto> eventPhotoList = eventPhotoService.findUserEventPhotoList(user, event);
-        List<String> eventPhotoUrlList = eventPhotoList.stream()
-                .map(EventPhoto::getUrl)
-                .collect(Collectors.toList());
-
+        List<EventPhoto> eventPhotoByEvent = eventPhotoService.findEventPhotoByEvent(event);
+        List<String> imageUrlList = eventPhotoByEvent.stream().map(EventPhoto::getUrl).toList();
         return EventPhotoResDto
                 .builder()
                 .eventId(eventId.toString())
-                .imageUrlList(eventPhotoUrlList)
+                .imageUrlList(imageUrlList)
                 .build();
     }
 
